--- a/_includes/menu-search.html
+++ b/_includes/menu-search.html
@@ -23,9 +23,9 @@
                          | replace: '/', '-'
                          | replace: '.html', '.md' %}
     <ul>
-      <li><span>1</span></li>
+      <li><span>λ</span></li>
       <li><span> {{page.url}}</span></li>
-      <li><span>⌘ blogspace λ </span></li>
+      <li><span>⌘ personal-site [master] </span></li>
       <li><span>* Menu</span></li>
     </ul>
 
