--- a/src/styl/_header.styl
+++ b/src/styl/_header.styl
@@ -44,12 +44,13 @@ $bg
 		color: sec
 		text-align center
 	.site-title
+		font-family: pokemon-font;
 		font-size rem(30px)
 		line-height 1
 		display block
 		letter-spacing 9px
 		+above(cut)
-			letter-spacing 16px
+			letter-spacing 4px
 			margin-bottom 0
 			font-size rem(20px)
 	.site-description
@@ -88,3 +89,11 @@ $bg
 		font-weight 300
 		+above(cut)
 			font-size rem(30px)
+
+	/* pokemon font for landing page 
+	h3 {
+	font-smooth: never;
+	-webkit-font-smoothing: none;
+	font-family: 'pokemon-font', monospace;
+	font-size: 40x;
+	}*/
