--- a/src/styl/_typo.styl
+++ b/src/styl/_typo.styl
@@ -15,6 +15,12 @@ a
   src: local('Open Sans Extrabold'), local('OpenSans-Extrabold'), url(https://fonts.gstatic.com/s/opensans/v10/EInbV5DfGHOiMmvb1Xr-hiYtBUPDK3WL7KRKS_3q7OE.woff2) format('woff2');
 }
 
+@font-face {
+    font-family: 'pokemon-font';
+    font-style: normal;
+    src: local('pokemon-font'), '/src/fonts/pokemon-font/pokemon-font.ttf'; 
+    }
+
 mainFont(weight = 800)
     font-family 'Open Sans', sans-serif
     font-weight weight
