small changes to menu

--- a/_includes/menu-search.html
+++ b/_includes/menu-search.html
@@ -25,7 +25,7 @@
     <ul>
       <li><span>λ</span></li>
       <li><span> {{page.url}}</span></li>
-      <li><span>⌘ personal-site [master] </span></li>
+      <li><span>⌘ remote:personal-site [master] Ω</span></li>
       <li><span>* Menu</span></li>
     </ul>
 
