fix bundled font rendering issue

--- a/_includes/header-default.html
+++ b/_includes/header-default.html
@@ -47,8 +47,9 @@
               {% endfor %}
         </ul>
         <br><br>
-        <h3 style="font-family: pokemon-font; color: white;">
-            [ Press A for nav menu! ]
+        <!--<h3 style="font-family: pokemon-font; color: white;">-->
+        <h3 class="site-tagline">
+            <p>[ Press A for nav menu! ]<p></p>
         </h3>
         <!-- Blog migration coming soon
         <ul class="recent">
