--- a/src/styl/_header.styl
+++ b/src/styl/_header.styl
@@ -44,8 +44,9 @@ $bg
 		color: sec
 		text-align center
 	.site-title
-		font-family: pokemon-font;
+		font-family: 'pokemon-font', monospace;
 		font-size rem(30px)
+		font-size: 3.5vw
 		line-height 1
 		display block
 		letter-spacing 9px
@@ -59,6 +60,14 @@ $bg
 		margin rem(30px) 0
 		+above(cut)
 			font-size rem(40px)
+	.site-tagline
+		font-family 'pokemon-font', monospace;
+		font-size 1.25vw
+		font-size rem(13px)
+		
+		color: sec
+		line-height 1
+		display block
 
 // Header Post
 .header-post
