--- a/_includes/header-post.html
+++ b/_includes/header-post.html
@@ -1,4 +1,4 @@
 <header class="header-post">
-   	<p>nwalsh.io</p>
+   	<p style="font-family:pokemon-font;">nwalsh.io</p>
     {% include menu-search.html %}
 </header>
