small changes for first public launch, hiding about button on homepage due to mobile issues

--- a/_includes/header-default.html
+++ b/_includes/header-default.html
@@ -13,10 +13,10 @@
             <a aria-label="Send email" title="Send me a e-mail" href="mailto:{{site.email}}">
                 <svg class="icon icon-email"><use xlink:href="#icon-email"></use></svg>
             </a>
-            
+            <!-- Currently leaving this out bc pushes buttons to two lines on mobile
             <a aria-label="About me" title="Find out about me" href="/about">
                     <svg class="icon icon-person"><use xlink:href="#icon-person"></use></svg>
-            </a>
+            </a>-->
 
             <a aria-label="My Twitter" title="Follow me on Twitter" target="_blank" href="https://twitter.com/{{site.twitter_username}}">
                 <svg class="icon icon-twitter"><use xlink:href="#icon-twitter"></use></svg>
