--- a/src/styl/_post.styl
+++ b/src/styl/_post.styl
@@ -65,7 +65,7 @@
         font-size rem(22px)
         line-height 1.4
         &:before
-            content '##'
+            content '>'
             font-size rem(25px)
         +above(cut)
             font-size rem(35px)
